# phrace

./: Cargo.toml  LICENSE  README.md
example_data/: potential_energy_em.xvg  ramachandran.xvg
src/: main.rs
